calico_versioned_docs/version-3.24/getting-started/kubernetes/windows-calico/kubernetes/rancher.mdx
---
title: Install Calico for Windows on a Rancher Kubernetes Engine cluster
description: Install Calico for Windows on a Rancher RKE cluster.
---

## Big picture

Install {{prodnameWindows}} on a Rancher Kubernetes Engine (RKE) cluster.

## Value

Run Linux and Windows workloads on a RKE cluster with {{prodname}}.

## Before you begin

**Supported**

- RKE Kubernetes 1.20, 1.19, or 1.18

**Supported networking**

- BGP with no encapsulation
- VXLAN

**Required**

- An RKE cluster provisioned with [no network plugin](https://rancher.com/docs/rke/latest/en/config-options/add-ons/network-plugins#disabling-deployment-of-a-network-plug-in)
  but which otherwise meets the {{prodnameWindows}} Kubernetes [cluster requirements](requirements.mdx). This guide was tested with RKE v1.18.9.
- One or more Windows nodes that meet the [requirements](requirements.mdx).

## How to

The following steps will outline the installation of {{prodname}} networking on the RKE cluster, then the installation of {{prodnameWindows}} on the Windows nodes.

1. Install the Tigera {{prodname}} operator and custom resource definitions.

   ```
   kubectl create -f {{releases.0.manifests_url}}/manifests/tigera-operator.yaml
   ```

1. Download the necessary Installation custom resource.

   ```batch
   wget {{releases.0.manifests_url}}/manifests/custom-resources.yaml
   ```

1. Update the `calicoNetwork` options, ensuring that the correct pod CIDR is set. (Rancher uses `10.42.0.0/16` by default.)
   Below are sample installations for VXLAN and BGP networking using the default Rancher pod CIDR:

   **VXLAN**

   ```
   apiVersion: operator.tigera.io/v1
   kind: Installation
   metadata:
     name: default
   spec:
      Configures Calico networking.
     calicoNetwork:
       bgp: Disabled
        Note: The ipPools section cannot be modified post-install.
       ipPools:
       - blockSize: 26
         cidr: 10.42.0.0/16
         encapsulation: VXLAN
         natOutgoing: Enabled
         nodeSelector: all()
   ```

   **BGP**

   ```
   apiVersion: operator.tigera.io/v1
   kind: Installation
   metadata:
     name: default
   spec:
      Configures Calico networking.
     calicoNetwork:
        Note: The ipPools section cannot be modified post-install.
       ipPools:
       - blockSize: 26
         cidr: 10.42.0.0/16
         encapsulation: None
         natOutgoing: Enabled
         nodeSelector: all()
   ```

   :::note

   For more information on configuration options available in this manifest, see [the installation reference](../../../../reference/installation/api.mdx).

   :::

1. Apply the updated custom resources:

   ```batch
   kubectl create -f custom-resources.yaml
   ```

1. Configure strict affinity:

   ```batch
   kubectl patch ipamconfigurations default --type merge --patch='{"spec": {"strictAffinity": true}}'
   ```

1. Finally, follow the {{prodnameWindows}} [quickstart guide for Kubernetes](../quickstart.mdx#install-calico-for-windows-manually)
   For VXLAN clusters, follow the instructions under the "Kubernetes VXLAN" tab. For BGP clusters, follow the instructions under the "Kubernetes BGP" tab.

   :::note

   For Rancher default values for service CIDR and DNS cluster IP, see the [Rancher kube-api service options](https://rancher.com/docs/rke/latest/en/config-options/services/#kubernetes-api-server-options).

   :::

1. Check the status of the nodes with `kubectl get nodes`. If you see that the Windows node has the status `Ready`, then you have a {{prodnameWindows}} on RKE cluster ready for Linux and Windows workloads!

## Next steps

- [Try the basic policy demo](../demo.mdx)
- [Secure pods with {{prodname}} network policy](../../../../network-policy/get-started/calico-policy/calico-network-policy.mdx)
